# mcp_server_project

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/config/: __init__.py  logger.py
src/mcp_register/: __init__.py  mcp_filesystem_register.py
