[project]
name = "mcp-server-project"
version = "0.1.0"
description = "实现一下MCP服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"torch==2.7.0+cu128",
    "torchvision==0.22.0+cu128",
    "torchaudio==2.7.0+cu128",
    "xformers==0.0.30",
]


[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
xformers = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
explicit = false
